--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <header>
-            <h1 class="page-title">Rock × Paper × Scissors</h1>
-        </header>
-        <div class="buttons">
-            <button id="paper">Paper</button>
-            <button id="rock">Rock</button>
-            <button id="scissors">Scissors</button>
+        <div class="content">
+            <header>
+                <h1 class="page-title">Rock × Paper × Scissors</h1>
+            </header>
+            <div class="buttons">
+                <button id="paper"><img src="images/paper01.jpg"></button>
+                <button id="rock">Rock</button>
+                <button id="scissors">Scissors</button>
+            </div>
+            <p id="computer-play">Computer</p>
+            <h2 class="verdict">You win/draw/lose!</h2>
         </div>
-        <p id="computer-play">Computer</p>
-        <h2>You win/draw/lose!</h2>
     </body>
     <script src="script.js"></script>
 </html>
