add better game ui

--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     </head>
     <body>
         <div class="content">
-            <header>
-                <h1 class="page-title">Rock × Paper × Scissors</h1>
-            </header>
+            <div class="screen">
+                <div class="game-objects">
+                    <div class="enemy">ENEMY</div>
+                    <div class="player">PLAYER</div>
+                </div>
+            </div>
             <div class="buttons">
-                <button id="paper"><img src="images/paper01.jpg"></button>
                 <button id="rock">Rock</button>
+                <button id="paper">Paper</button>
                 <button id="scissors">Scissors</button>
             </div>
-            <p id="computer-play">Computer</p>
-            <h2 class="verdict">You win/draw/lose!</h2>
         </div>
     </body>
     <script src="script.js"></script>
