--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     <body>
         <div class="content">
             <div class="screen">
+                <p class="player-health">HEALTH</p>
                 <div class="game-objects">
                     <div class="enemy">ENEMY</div>
                     <div class="player">PLAYER</div>
                 </div>
+                <p class="enemy-health">HEALTH</p>
             </div>
             <div class="buttons">
                 <button id="rock">Rock</button>
