add player and computer score sides

--- a/index.html
+++ b/index.html
@@ -6,28 +6,29 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
+        <p class="player-score">Your score: 0</p>
         <div class="content">
             <div class="screen">
-                <div class="health-bar">
+                <!--<div class="health-bar">
                     <p class="player-health">HEALTH</p>
                     <div>|</div>
                     <div>|</div>
                     <div>|</div>
                     <div>|</div>
                     <div>|</div>
-                </div>
+                </div>-->
                 <div class="game-objects">
-                    <div class="enemy"><img class="enemy-image" src="images/rock.png"></div>
+                    <div class="computer"><img class="computer-image" src="images/rock.png"></div>
                     <div class="player"><img class="player-image" src="images/rock.png"></div>
                 </div>
-                <div class="health-bar">
-                    <p class="enemy-health">HEALTH</p>
+                <!--<div class="health-bar">
+                    <p class="computer-health">HEALTH</p>
                     <div>|</div>
                     <div>|</div>
                     <div>|</div>
                     <div>|</div>
                     <div>|</div>
-                </div>
+                </div>-->
             </div>
             <div class="buttons">
                 <button id="rock"><img class="image-rock" src="images/rock.png"></button>
@@ -35,6 +36,7 @@
                 <button id="scissors"><img class="image-scissors" src="images/scissors.png"></button>
             </div>
         </div>
+        <p class="computer-score">Computer score: 0</p>
     </body>
     <script src="script.js"></script>
 </html>
