--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="styles.css">
     </head>
     <body>
-        <p class="player-score">Your score: 0</p>
+        <p class="player-score">Your score: <span id="player-score--text">0</span></p>
         <div class="content">
             <div class="screen">
                 <!--<div class="health-bar">
@@ -36,7 +36,7 @@
                 <button id="scissors"><img class="image-scissors" src="images/scissors.png"></button>
             </div>
         </div>
-        <p class="computer-score">Computer score: 0</p>
+        <p class="computer-score">Computer score: <span id="computer-score--text">0</span></p>
     </body>
     <script src="script.js"></script>
 </html>
